Fabric info stuff and include ANTLR into jar

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'fabric-loom' version '1.7-SNAPSHOT'
 	id 'maven-publish'
+	id "com.modrinth.minotaur" version "2.+"
 }
 
 version = project.mod_version
@@ -57,6 +58,7 @@ dependencies {
 		include "io.wispforest:owo-sentinel:${project.owo_version}"
 	}
 
+	include 'org.antlr:antlr4-runtime:4.13.2'
 	implementation 'org.antlr:antlr4-runtime:4.13.2'
 }
 
@@ -104,4 +106,19 @@ publishing {
 		// The repositories here will be used for publishing your artifact, not for
 		// retrieving dependencies.
 	}
+}
+
+import com.modrinth.minotaur.dependencies.ModDependency
+
+modrinth {
+	token = "${System.getenv('MODRINTH_TOKEN')}" // Please use an environment variable for this! The default is `$MODRINTH_TOKEN`.
+	projectId = 'Zcj6ZAX1' // The ID of your Modrinth project. Slugs will not work.
+	versionName = "${project.version} for Trickster ${project.trickster_version}"
+	versionNumber = "${project.version}" // The (preferably SemVer) version of the mod. If not specified, it'll use the `version` declaration
+	uploadFile = remapJar // Tells Minotaur to use the remapped jar
+	gameVersions = ["${project.minecraft_version}"] as Iterable<? extends String> // An array of game versions the version supports
+	loaders = ['fabric'] // Self-explanatory.
+	dependencies = [
+			new ModDependency('ZdEfcqro', 'required') // Creates a new required dependency on Fabric API
+	]
 }
