--- a/gradle.properties
+++ b/gradle.properties
@@ -9,11 +9,11 @@ yarn_mappings=1.21.1+build.3
 loader_version=0.16.5
 
 # Mod Properties
-mod_version=1.0.2
+mod_version=1.0.4
 maven_group=com.thejebforge.trickster_lisp
 archives_base_name=trickster_lisp
 
 # Dependencies
 fabric_version=0.104.0+1.21.1
-trickster_version=2.0.0-alpha.39
+trickster_version=2.0.0-beta.1b
 owo_version=0.12.14+1.21
